--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </main>
 
     <!-- Som de vitória -->
-    <audio id="victory-sound" src="Adventure/Victory-Sound-Effect.mp3" preload="auto"></audio>
+    <audio id="Victory-Sound-Effect" src="Adventure/Victory-Sound-Effect.mp3" preload="auto"></audio>
 
     <script>
         const avanca = document.querySelectorAll('.btn-proximo');
