--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
                         // Gerar moedas
                         gerarMoedas();
                     }
+                } else {
+                    console.error('Erro: Não foi possível encontrar o próximo passo com o ID:', proximoPasso);
                 }
             });
         });
