--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <div class="passo" id="passo-11">
             <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
             <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar este lugar.</p>
+            <button class="btn-proximo" data-proximo="13">Fim da jornada</button>
         </div>
         <div class="passo" id="passo-12">
             <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições que levam à cidade perdida.</p>
@@ -142,17 +143,20 @@
                     atual.classList.remove('ativo');
                     proximoElemento.classList.add('ativo');
 
-                    // Gerar moedas
-                    gerarMoedas();
+                    // Quando chegar nos passos finais (passo 11 ou 12), gerar as moedas
+                    if (proximoPasso === 'passo-11' || proximoPasso === 'passo-12') {
+                        gerarMoedas();
+                    }
                 } else {
                     console.error('Erro: Não foi possível encontrar o próximo passo com o ID:', proximoPasso);
                 }
             });
         });
 
-        // Função para gerar moedas continuamente
+        // Função para gerar moedas no final da jornada (passos 11 ou 12)
         function gerarMoedas() {
-            setInterval(() => {  // Gera moedas a cada intervalo
+            // Gera moedas a cada 500ms, mas apenas quando a jornada chega ao fim
+            setInterval(() => { 
                 const moeda = document.createElement('div');
                 moeda.classList.add('moeda');
                 moeda.style.left = `${Math.random() * 100}%`;  // Posiciona a moeda aleatoriamente
