--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         </div>
     </main>
 
-    <!-- Som de vitória -->
-    <audio id="victory-sound" src="victory-sound.mp3" preload="auto"></audio>
+    <!-- Som de vitória com o novo caminho de arquivo -->
+    <audio id="victory-sound" src="Adventure/Victory Sound Effect.mp3" preload="auto"></audio>
 
     <script>
         const avanca = document.querySelectorAll('.btn-proximo');
